# micropuppy

./: .editorconfig  Cargo.toml  Makefile  README.md  aarch64-unknown-none.json  flake.nix  make.sh  run  rust-toolchain.toml  shell.nix
.github/workflows/: job-build-docs.yml  pages-deploy.yml
a53/: .gitignore  Cargo.toml  Makefile  a53.svd
kernel/: Cargo.toml  Makefile  aarch64-unknown-none.json  build.rs  kernel.gdb
kernel/.cargo/: config.toml
kernel/crates/allocator/: Cargo.toml
kernel/crates/allocator/src/: lib.rs
kernel/crates/buddy-alloc/: Cargo.toml
kernel/crates/buddy-alloc/src/: lib.rs  main.rs  tree.rs
kernel/crates/num/: Cargo.toml
kernel/crates/num/src/: lib.rs
kernel/src/: alloc.rs  entry.s  gicv2.rs  linker.ld  logging.rs  main.rs  num.rs  scheduler.rs  start.s  sync.rs  task.rs  tt.rs  vectors.s
kernel/src/a53/: daif.rs  gicv2.rs  mod.rs  nzcv.rs  pl011.rs  spsr.rs
kernel/src/reg/: memory_mapped.rs  mod.rs  system.rs
kernel/src/tt/: descriptor.rs  mod.rs  page.rs  table.rs
kernel/src/tt/descriptor/: block.rs  mod.rs  page.rs  table.rs
qemu/: .gitignore  Makefile
runner/: Cargo.toml
runner/src/: action.rs  actions.rs  command.rs  main.rs  runner.rs
tools/: gdb_info_tt.py  gdb_qemu.py  qemu_dump_dts.sh
tools/gdb/: __init__.py  info_tt.py  qemu.py
xtask/: Cargo.toml
xtask/src/: command.rs  main.rs  runner.rs
