[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
fdt = "0.1.5"
generic_once_cell = "0.1.1"
lock_api = "0.4.11"
log = "0.4.20"
vcell = "0.1.3"
